Fix CSS: resize map on mobile

--- a/wp-content/themes/cpipr/css/landing.css
+++ b/wp-content/themes/cpipr/css/landing.css
@@ -1796,6 +1796,10 @@ textarea.form-control {
 	.jsmaps-wrapper .jsmaps {
     padding-top: 40px;
 	}
+	.jsmaps-wrapper .jsmaps svg {
+		width: 96%;
+		margin-left: 2%;
+	}
 }
 
 /* Landscape phone and down */
